--- a/conf/locale/he/LC_MESSAGES/djangojs.po
+++ b/conf/locale/he/LC_MESSAGES/djangojs.po
@@ -9158,7 +9158,7 @@ msgstr "אתה נמצא כאן"
 
 #: test_root/staticfiles/templates/learner_dashboard/program_header_view.underscore
 msgid "Dashboard"
-msgstr "הקורסים שלי"
+msgstr "אזור אישי"
 
 #: test_root/staticfiles/templates/learner_dashboard/program_header_view.underscore
 msgid "Programs"
